user location view

--- a/views/main.hbs
+++ b/views/main.hbs
@@ -3,6 +3,8 @@
 
 
 <div id="map"></div>
+<a href="/main/new"><button>ADD</button></a>
+
 
 <script src="https://maps.googleapis.com/maps/api/js?key={{key}}"></script>
 <script src="/javascripts/script.js"></script>
