--- a/views/userLocation.hbs
+++ b/views/userLocation.hbs
@@ -1,13 +1,10 @@
 <h1>PetFamily</h1>
-<h3>Choose your location</h3>
+<h3>Create New Location</h3>
 
 <form action="/main/new" method="POST">
-<input type="text" name="userLocationName" id="" placeholder="Mi localización">
-<input type="submit" value="Save">
-</form>
+  <input type="text" name="userLocationName" placeholder="New Location">
+  <button type="submit">Save</button>
+</form> <br>
 <div id="map"></div>
-
-
-
 <script src="https://maps.googleapis.com/maps/api/js?key={{key}}"></script>
 <script src="/javascripts/script.js"></script>
