views and routes created

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -3,10 +3,6 @@
 <input type="text" name="availability" id="" placeholder="Enter your time schedule">
 <label for="pricePerHour">Enter your fee</label>
 <input type="text" name="pricePerHour" id="" placeholder="Enter your fee/hour in €">
-<label for="userType">Select your activity</label>
-<select name="userType" id=""><option value="Adoption Center">Adoption Center</option>
-<option value="Individual">Individual</option>
-</select>
 <label for="description">Description</label>
 <textarea name="description" id="" placeholder="Describe your capabilities "></textarea>
 <label for="typeActivity">Select your activity</label>
@@ -15,4 +11,5 @@
 <option value="Babysitting">BabySitting</option>
 <option value="Both">Both</option>
 </select>
+  <button>Update</button>
 </form>
