--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -6,8 +6,22 @@
 
   <br><br>
 
+    <label for="email">Email</label>
+  <input id="email" type="email" name="email" placeholder="Enter your Email">
+
+  <br><br>
+
   <label for="password">Password</label>
   <input id="password" type="password" name="password" placeholder="Your password">
+
+  <br><br>
+   <label for="userType">Check your profile </label>
+  <input type="radio" value="Adoption Center" name="userType">
+  <label for="Adoption Center">Adoption Center</label>
+  <input type="radio" value="Individual" name="userType">
+  <label for="Individual">Individual</label>
+
+  <br><br>
   <br>
   {{#if message }}
     <div class="error-message">{{ message }}</div>
