--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,3 +1,5 @@
+<a href="/main">Go to Main</a>
+<a href="/main/{{id}}">Go to Profile</a>
 <form action="/profile" method="post">
 <label for="availability">Available</label>
 <input type="text" name="availability" id="" placeholder="Enter your time schedule">
