--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -1,3 +1,5 @@
+<a href="/main">Go to Main</a>
+<a href="/profile">Edit Profile</a>
 <h1>PetFamily</h1>
 <p>Name: {{user.username}}</p>
 <p>Email: {{user.email}}</p>
