--- a/views/main.hbs
+++ b/views/main.hbs
@@ -7,4 +7,4 @@
 
 
 <script src="https://maps.googleapis.com/maps/api/js?key={{key}}"></script>
-<script src="/javascripts/script.js"></script>
+<script src="/javascripts/scriptMain.js"></script>
