--- a/views/userLocation.hbs
+++ b/views/userLocation.hbs
@@ -7,4 +7,4 @@
 </form> <br>
 <div id="map"></div>
 <script src="https://maps.googleapis.com/maps/api/js?key={{key}}"></script>
-<script src="/javascripts/script.js"></script>
+<script src="/javascripts/scriptNewLocation.js"></script>
