--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,12 +13,15 @@
 
 <body>
 
+    {{#if user}}
   <nav>
     <a href="/">Home</a>
+    <a href="/auth/logout">Logout</a>
+    {{else}}
     <a href="/auth/login">Login</a>
     <a href="/auth/signup">Signup</a>
-    <a href="/auth/logout">Logout</a>
   </nav>
+    {{/if}}
 
   {{{body}}}
 </body>
