user-profile shows user information. LInks in layout limited to user but routes are not restricted

--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -3,3 +3,8 @@
 <h1>PetFamily</h1>
 <p>Name: {{user.username}}</p>
 <p>Email: {{user.email}}</p>
+<p>Availability: {{user.availability}}</p>
+<p>Price/hour: {{user.pricePerHour}}</p>
+<p>Center description: {{user.centerDescription}}</p>
+<p>Activity: {{user.typeActivity}}</p>
+
