map to add new locations

--- a/views/userLocation.hbs
+++ b/views/userLocation.hbs
@@ -3,6 +3,8 @@
 
 <form action="/main/new" method="POST">
   <input type="text" name="userLocationName" placeholder="New Location">
+  <input type="hidden" name="lat">
+  <input type="hidden" name="lng">
   <button type="submit">Save</button>
 </form> <br>
 <div id="map"></div>
