--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,7 +15,7 @@
 
     {{#if user}}
   <nav>
-    <a href="/">Home</a>
+    <a href="/main">Home</a>
     <a href="/auth/logout">Logout</a>
     {{else}}
     <a href="/auth/login">Login</a>
