creation of middleware, to redirect to profile & modifications on the map

--- a/views/userLocation.hbs
+++ b/views/userLocation.hbs
@@ -2,9 +2,9 @@
 <h3>Create New Location</h3>
 
 <form action="/main/new" method="POST">
-  <input type="text" name="userLocationName" placeholder="New Location">
-  <input type="hidden" name="lat">
-  <input type="hidden" name="lng">
+  <input type="text" name="userLocationName" placeholder="New Location" id="userLocationName">
+  <input type="hidden" name="lat" id="lat">
+  <input type="hidden" name="lng" id="lng">
   <button type="submit">Save</button>
 </form> <br>
 <div id="map"></div>
