--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,17 +1,18 @@
 <a href="/main">Go to Main</a>
 <a href="/main/{{id}}">Go to Profile</a>
 <form action="/profile" method="post">
-<label for="availability">Available</label>
-<input type="text" name="availability" id="" placeholder="Enter your time schedule">
-<label for="pricePerHour">Enter your fee</label>
-<input type="text" name="pricePerHour" id="" placeholder="Enter your fee/hour in €">
-<label for="description">Description</label>
-<textarea name="description" id="" placeholder="Describe your capabilities "></textarea>
-<label for="typeActivity">Select your activity</label>
-<select name="typeActivity" id=""><option value="Adoption">Adoption</option>
-<option value="Finder">Find babySitter</option>
-<option value="Babysitting">BabySitting</option>
-<option value="Both">Both</option>
-</select>
-  <button>Update</button>
+  <label for="availability">Available</label>
+  <input type="text" name="availability" id="" placeholder="Enter your time schedule">
+  <label for="pricePerHour">Enter your fee</label>
+  <input type="text" name="pricePerHour" id="" placeholder="Enter your fee/hour in €">
+  <label for="centerDescription">Description</label>
+  <textarea name="centerDescription" placeholder="Describe your capabilities "></textarea>
+  <label for="typeActivity">Select your activity</label>
+  <select name="typeActivity" id="">
+    <option value="Adoption">Adoption</option>
+    <option value="Finder">Find babySitter</option>
+    <option value="Babysitting">BabySitting</option>
+    <option value="Both">Both</option>
+  </select>
+  <button type="submit">Update</button>
 </form>
