--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,4 +1,5 @@
 <a href="/main/{{user._id}}">Go to profile</a>
+<a href="/main/pets">Add a Pet</a>
 <p>Hello, {{user.username}}!!</p>
 <h1>PetFamily</h1>
 <h3>Find the right home for your pet</h3>
