modificatiosn to the map's scripts, to the main route and animal views

--- a/views/user-animals-partial.hbs
+++ b/views/user-animals-partial.hbs
@@ -1,9 +1,8 @@
-<h1>User animals</h1>
+<h1>User's Pets</h1>
 <div class="card">
-      <img class="card-img-top" src="{{this.image_url}}" alt="Card image beer">
-      <div class="card-beer">
-        <h3 class="beer-title">{{this.name}} </h3>
-       <h4 class="beer-tagline">{{this.tagline}}</h4>
-        <p class="card-text">{{this.description}}</p>
-      </div>
+  <img src="{{this.petPath}}" alt="{{this.name}}'s phots'">
+  <h3>{{this.name}} </h3>
+  <p>{{this.age}}</p>
+  <p>{{this.description}}</p>
+  <p>{{this.notes}}</p>
 </div>
