--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -1,5 +1,7 @@
 <a href="/main">Go to Main</a>
 <a href="/profile">Edit Profile</a>
+<a href="/main/pets">Add Pet Profiles</a>
+<a href="#">Edit Pet Profile</a>
 <h1>PetFamily</h1>
 <p>Name: {{user.username}}</p>
 <p>Email: {{user.email}}</p>
@@ -7,4 +9,3 @@
 <p>Price/hour: {{user.pricePerHour}}</p>
 <p>Center description: {{user.centerDescription}}</p>
 <p>Activity: {{user.typeActivity}}</p>
-
