--- a/views/main.hbs
+++ b/views/main.hbs
@@ -7,7 +7,9 @@
 
 <div id="map"></div>
 <a href="/main/new"><button>ADD</button></a>
-
-
+<p>{{pepe}}</p>
+<script>
+  window.pepe = {{{pepe}}};
+</script>
 <script src="https://maps.googleapis.com/maps/api/js?key={{key}}"></script>
 <script src="/javascripts/scriptMain.js"></script>
