--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,13 +1,12 @@
-<a href="/main/{{user._id}}">Go to profile</a>
-<a href="/main/pets">Add a Pet</a>
+{{!-- <a href="/main/pets">Add a Pet</a> --}}
 <p>Hello, {{user.username}}!!</p>
-<h1>PetFamily</h1>
+{{!-- <h1>PetFamily</h1> --}}
 <h3>Find the right home for your pet</h3>
 
 
 <div id="map"></div>
 <a href="/main/new"><button>ADD</button></a>
-<p>{{pepe}}</p>
+{{!-- <p>{{pepe}}</p> --}}
 <script>
   window.pepe = {{{pepe}}};
 </script>
