--- a/views/petForm.hbs
+++ b/views/petForm.hbs
@@ -1,24 +1,32 @@
 <h1>Add your pet</h1>
 <form action="/main/pets" method="POST" enctype="multipart/form-data">
   <label for="name">Pet Name</label>
-  <input type="text" name="name" id="name">
+  <input type="text" name="name" id="name"> <br><br>
+
   <label for="type">Select your animal</label>
   <select name="type" id="type">
+    <option selected disabled> Choose One</option>
     <option value="Dog">Dog</option>
     <option value="Cat">Cat</option>
     <option value="Other">Other</option>
-  </select>
+  </select> <br><br>
+
   <label for="description">Description</label>
-  <textarea name="description" id="name"></textarea>
+  <textarea name="description" id="name"></textarea> <br><br>
+
   <label for="age">Age</label>
-  <input type="text" name="age" id="age">
+  <input type="text" name="age" id="age"> <br><br>
+
   <label for="notes">Notes</label>
-  <input type="text" name="notes" id="notes">
+  <input type="text" name="notes" id="notes"> <br><br>
+
   <label for="vaccunationCompleted">Is vaccunated?</label>
   <select name="vaccunationCompleted" id="vaccunationCompleted">
+    <option selected disabled> Choose One</option>
     <option value="true">Si</option>
     <option value="false">No</option>
-  </select>
+  </select> <br><br>
+  
   <label for="petPhoto">Photo</label>
   <input type="file" name="petPhoto" id="petPhoto">
 
