--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -1,8 +1,8 @@
-<a href="/main">Go to Main</a>
-<a href="/profile">Edit Profile</a>
-<a href="/main/pets">Add Pet Profiles</a>
-<a href="#">Edit Pet Profile</a>
-<h1>PetFamily</h1>
+{{!-- <a href="/main">Go to Main</a> --}}
+{{!-- <a href="/profile">Edit Profile</a> --}}
+{{!-- <a href="/main/pets">Add Pet Profiles</a>
+<a href="#">Edit Pet Profile</a> --}}
+{{!-- <h1>PetFamily</h1> --}}
 <p>Name: {{user.username}}</p>
 <p>Email: {{user.email}}</p>
 <p>Availability: {{user.availability}}</p>
