add profile pic to model and to form

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -9,7 +9,7 @@
 
   <label for="centerDescription">Description</label>
   <textarea name="centerDescription" placeholder="Describe your capabilities "></textarea><br><br>
-  
+
   <label for="typeActivity">Select your activity</label>
   <select name="typeActivity" id="">
     <option selected disabled>Choose one</option>
@@ -17,6 +17,8 @@
     <option value="Finder">Find babySitter</option>
     <option value="Babysitting">BabySitting</option>
     <option value="Both">Both</option>
-  </select>
+  </select> <br><br>
+  <label for="userPhoto">Photo</label>
+  <input type="file" name="userPhoto" id="userPhoto">
   <button type="submit">Update</button>
 </form>
