modifications in the user's profile

--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -13,4 +13,4 @@
 
 <h2>My Pets</h2>
 <img src="{{user.pets.petPath}}" alt="{{user.pets.name}}'s Photo'">
-<p>{{user.pets.name}}</p>
+<p>Name: {{user.pets}}</p>
