--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -2,11 +2,9 @@
 <h2>Login</h2>
 
 <form action="/auth/login" method="POST" id="form-container">
+
   <label for="username">Username</label>
   <input id="username" type="text" name="username" placeholder="JonSnow">
-
-  <br><br>
-
   <label for="password">Password</label>
   <input id="password" type="password" name="password" placeholder="Your password">
   <br>
@@ -14,9 +12,7 @@
     <div class="error-message">{{ message }}</div>
   {{/if}}
 
-  <br><br>
-
-  <button>Login</button>
+  <button class="waves-effect waves-light btn">Login</button>
 
   <p class="account-message">
     Don't have an account yet?
