--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -3,9 +3,11 @@
 {{!-- <a href="/main/pets">Add Pet Profiles</a>
 <a href="#">Edit Pet Profile</a> --}}
 {{!-- <h1>PetFamily</h1> --}}
-<p>Name: {{user.username}}</p>
-<p>Email: {{user.email}}</p>
-<p>Availability: {{user.availability}}</p>
-<p>Price/hour: {{user.pricePerHour}}</p>
-<p>Center description: {{user.centerDescription}}</p>
-<p>Activity: {{user.typeActivity}}</p>
+  <h3>{{user.username}} Profile!!</h3> 
+
+<h6>Name: {{user.username}}</h6>
+<h6>Email: {{user.email}}</h6>
+<h6>Availability: {{user.availability}}</h6>
+<h6>Price/hour: {{user.pricePerHour}}</h6>
+<h6>Center description: {{user.centerDescription}}</h6>
+<h6>Activity: {{user.typeActivity}}</h6>
