--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -29,7 +29,7 @@
 
   <br><br>
 
-  <button>Create account</button>
+  <button class="waves-effect waves-light btn">Create account</button>
 
   <p class="account-message">
     Do you already have an account?
