--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,16 +5,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{title}}</title>
+  {{!-- <title>{{title}}</title> --}}
   <link rel="stylesheet" href="/stylesheets/style.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
+ <!-- Compiled and minified CSS -->
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
 <body>
-
+ <nav>
+    <div class="nav-wrapper">
+      <ul class="center hide-on-med-and-down">
   {{#if user}}
-  <nav>
+          <li><a href="/main">Home</a></li>
+        <li><a href="/main/{{user._id}}">Profile</a></li>
+        <li><a href="/profile">Edit profile</a></li>
+        <li><a href="/main/pets">Add pet</a></li>
+        <li><a href="#">Edit Pet Profile</a></li>
+        <li><a href="/auth/logout">Logout</a></li>
+  {{else}}
+        <li><a href="/auth/login">Login</a></li>
+       <li><a href="/auth/signup">Signup</a></li> 
+      </ul>
+    </div>
+  </nav>
+  {{/if}}
+  <br><br>
+
+  {{!-- <nav>
     <a href="/main">Go to Main</a>
     <a href="/main/{{user._id}}">Go to profile</a>
     <a href="/profile">Edit Profile</a>
@@ -26,9 +43,13 @@
     <a href="/auth/signup">Signup</a>
   </nav>
   <h1>PetFamily</h1>
-  {{/if}}
+  {{/if}} --}}
 
   {{{body}}}
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 </body>
 
 </html>
