--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -2,21 +2,19 @@
 <h3>Edit Your Profile</h3>
 <form action="/profile" method="post">
   <label for="availability">Available</label>
-  <input type="text" name="availability" id="" placeholder="Enter your time schedule"> <br><br>
-
+  <input type="text" name="availability" id="" placeholder="Enter your time schedule"> <br>
   <label for="pricePerHour">Enter your fee</label>
-  <input type="text" name="pricePerHour" id="" placeholder="Enter your fee/hour in €"><br><br>
+  <input type="text" name="pricePerHour" id="" placeholder="Enter your fee/hour in €"><br>
 
   <label for="centerDescription">Description</label>
-  <textarea name="centerDescription" placeholder="Describe your capabilities "></textarea><br><br>
+  <textarea name="centerDescription" placeholder="Describe your capabilities "></textarea><br>
   
   <label for="typeActivity">Select your activity</label>
-  <select name="typeActivity" id="">
-    <option selected disabled>Choose one</option>
+  <select class="browser-default" name="typeActivity" id="">
     <option value="Adoption">Adoption</option>
     <option value="Finder">Find babySitter</option>
     <option value="Babysitting">BabySitting</option>
     <option value="Both">Both</option>
   </select>
-  <button type="submit">Update</button>
+  <button class="waves-effect waves-light btn" type="submit">Update</button>
 </form>
