--- a/views/userLocation.hbs
+++ b/views/userLocation.hbs
@@ -5,8 +5,9 @@
   <input type="text" name="userLocationName" placeholder="New Location" id="userLocationName">
   <input type="hidden" name="lat" id="lat">
   <input type="hidden" name="lng" id="lng">
-  <button type="submit">Save</button>
-</form> <br>
-<div id="map"></div>
+  <button class="waves-effect waves-light btn" type="submit">Save</button>
+</form> 
+<div id="map"></div><br>
+
 <script src="https://maps.googleapis.com/maps/api/js?key={{key}}"></script>
 <script src="/javascripts/scriptNewLocation.js"></script>
