addition of edit pet profile view and get route

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,7 @@
     <a href="/main/{{user._id}}">Go to profile</a>
     <a href="/profile">Edit Profile</a>
     <a href="/main/pets">Add Pet Profiles</a>
-    <a href="#">Edit Pet Profile</a>
+    <a href="/main/pets/edit">Edit Pet Profile</a>
     <a href="/auth/logout">Logout</a>
     {{else}}
     <a href="/auth/login">Login</a>
