now we can showcase all the locations in the map

--- a/views/main.hbs
+++ b/views/main.hbs
@@ -8,7 +8,7 @@
 <a href="/main/new"><button>ADD</button></a>
 {{!-- <p>{{pepe}}</p> --}}
 <script>
-  window.pepe = {{{pepe}}};
+  window.address = {{{address}}};
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key={{key}}"></script>
 <script src="/javascripts/scriptMain.js"></script>
