--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,10 +17,9 @@
   <nav>
     <a href="/main">Go to Main</a>
     <a href="/main/{{user._id}}">Go to profile</a>
-    <a href="/profile">Edit Profile</a>
     <a href="/main/pets">Add Pet Profiles</a>
-    <a href="/main/pets/edit">Edit Pet Profile</a>
     <a href="/auth/logout">Logout</a>
+    {{!-- <a href="/main/{{user._id}}"><img src="{{user.userPath}}" alt=""></a> --}}
     {{else}}
     <a href="/auth/login">Login</a>
     <a href="/auth/signup">Signup</a>
