modificaciones en las vistas y la maquetacion

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -7,28 +7,18 @@
   <input type="text" name="pricePerHour" id="" placeholder="Enter your fee/hour in €"><br>
 
   <label for="centerDescription">Description</label>
-<<<<<<< HEAD
   <textarea name="centerDescription" placeholder="Describe the location's facilities"></textarea><br><br>
 
-=======
-  <textarea name="centerDescription" placeholder="Describe your capabilities "></textarea><br>
-  
->>>>>>> Angel
   <label for="typeActivity">Select your activity</label>
   <select class="browser-default" name="typeActivity" id="">
     <option value="Adoption">Adoption</option>
     <option value="Finder">Find babySitter</option>
     <option value="Babysitting">BabySitting</option>
     <option value="Both">Both</option>
-<<<<<<< HEAD
   </select> <br><br>
 
   <label for="userPhoto">Photo</label>
-  <input type="file" name="userPhoto" id="userPhoto"> <br><br>
+  <input type="file" name="userPhoto" id="userPhoto"> <br>
 
-  <button type="submit">Update</button>
-=======
-  </select>
-  <button class="waves-effect waves-light btn" type="submit">Update</button>
->>>>>>> Angel
+   <button class="waves-effect waves-light btn" type="submit">Update</button>
 </form>
