--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,10 +6,14 @@ a {
   color: #00B7FF; }
 
 h1, h2, h3, h4, h5, h6 {
-  color: black; }
+  color: #9e9e9e; }
+
+p {
+  color: black;
+  line-height: 15px; }
 
 label {
-  font-size: 16px;
+  font-size: 1.8rem !important;
   color: black; }
 
 #map {
