--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -8,11 +8,15 @@ a {
 }
 
 h1,h2,h3,h4,h5,h6{
+  color: #9e9e9e;
+}
+p{
   color:black;
+  line-height: 15px;
 }
 
 label{
-  font-size: 16px;
+  font-size: 1.8rem !important;
   color:black;
 }
 
