--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -1,5 +1,5 @@
 <h4>My Profile</h4>
-<img src="{{user.userPath}}" alt="{{user.username}}'s Profile Picture'">
+<img class="user-profile" src="{{user.userPath}}" alt="{{user.username}}'s Profile Picture'">
 <p>Name: {{user.username}}</p>
 <p>Email: {{user.email}}</p>
 <p>Availability: {{user.availability}}</p>
