--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,7 +18,7 @@ label {
 
 #map {
   height: 80vh;
-  border-radius: 10%; }
+  border-radius: 10px; }
 
 .logo-container {
   height: 80vh;
@@ -27,5 +27,13 @@ label {
 .responsive-img {
   margin: 5vh auto;
   display: block; }
+
+.user-profile {
+  width: 200px;
+  border-radius: 50%;
+  opacity: 1.5; }
+
+.user-profile:hover {
+  opacity: .5; }
 
 /*# sourceMappingURL=style.css.map */
