--- a/views/petForm.hbs
+++ b/views/petForm.hbs
@@ -22,7 +22,7 @@
 
   <label for="vaccunationCompleted">Is vaccunated?</label>
   <select class="browser-default" name="vaccunationCompleted" id="vaccunationCompleted">
-    <option value="true">Si</option>
+    <option value="true">Yes</option>
     <option value="false">No</option>
   </select> <br>
   
