modificatiosn in views

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -15,11 +15,12 @@
   <input id="password" type="password" name="password" placeholder="Your password">
 
   <br><br>
-   <label for="userType">Check your profile </label>
-  <input type="radio" value="Adoption Center" name="userType">
-  <label for="Adoption Center">Adoption Center</label>
-  <input type="radio" value="Individual" name="userType">
-  <label for="Individual">Individual</label>
+    <label for="type">Select your user type</label>
+  <select class="browser-default" name="userType" id="">
+    <option selected disabled> Choose One</option>
+    <option value="Adoption Center">Adoption Centre</option>
+    <option value="Citizen">Citizen </option>
+  </select> <br><br>
 
   <br><br>
   <br>
