--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -13,9 +13,9 @@
 <div>
   <img src="{{this.petPath}}" alt=" {{this.name}}'s Photo'">
   <p>Name: {{this.name}}</p>
+  <p>{{this.name}} is a {{this.type}}</p>
   <p>Age: {{this.age}}</p>
   <p>Description:{{this.description}}</p>
-  {{!-- <p>{{this._id}}</p> --}}
   <p>Notes: {{this.notes}}</p>
   <p>Is {{this.name}} vaccinated? {{this.vaccunationCompleted}}</p>
   <button type="submit" class=" waves-effect waves-light btn"><a href="/main/pets/{{this._id}}/edit">Edit this pet</a></button>
