--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -15,7 +15,8 @@
     <option value="Finder">Find babySitter</option>
     <option value="Babysitting">BabySitting</option>
     <option value="Both">Both</option>
-  </select> <br><br>
+  </select> 
+  <br><br>
 
   <label for="userPhoto">Photo</label>
   <input type="file" name="userPhoto" id="userPhoto"> <br>
