--- a/views/userLocation.hbs
+++ b/views/userLocation.hbs
@@ -1,4 +1,8 @@
-{{!-- <h1>PetFamily</h1> --}}
+{{!-- <h1>PetFamily</h1>
+<script src=“https://maps.googleapis.com/maps/api/js?key={{KEY}}&libraries=places&callback=startMap” async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key={{key}}"></script>
+
+--}}
 <h3>Create New Location</h3>
 
 <form action="/main/new" method="POST">
@@ -6,8 +10,11 @@
   <input type="hidden" name="lat" id="lat">
   <input type="hidden" name="lng" id="lng">
   <button class="waves-effect waves-light btn" type="submit">Save</button>
-</form> 
+</form>
+<input id="pac-input" class="controls" type="text" placeholder="Search Box">
 <div id="map"></div><br>
 
-<script src="https://maps.googleapis.com/maps/api/js?key={{key}}"></script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key={{key}}&libraries=places&callback=startMap" async defer></script>
+
 <script src="/javascripts/scriptNewLocation.js"></script>
