--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,8 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+  font: 14px;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #FFE6B7; }
 
 a {
   color: #00B7FF; }
@@ -21,6 +23,12 @@ p {
   color: black;
   line-height: 15px; }
 
+.profile-pic {
+  width: 4.4%;
+  border-radius: 50%;
+  padding-top: 5.5px;
+  float: right; }
+
 label {
   font-size: 1.8rem !important;
   color: black; }
@@ -30,12 +38,30 @@ label {
   border-radius: 10px; }
 
 .logo-container {
-  height: 80vh;
+  display: flex;
+  flex-direction: row;
+  flex-flow: nowrap;
+  height: 100vh;
   width: 100%; }
 
 .responsive-img {
   margin: 5vh auto;
-  display: block; }
+  display: block;
+  width: 75%; }
+
+.sign-up {
+  width: 50%; }
+
+.main-title {
+  color: white; }
+
+.pet-profile {
+  width: 300px;
+  border-radius: 50%;
+  opacity: 1.5; }
+
+.pet-profile:hover {
+  opacity: .5; }
 
 .user-profile {
   width: 200px;
