--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,39 +1,44 @@
-<h2>Signup</h2>
+<div class="logo-container">
+  <div>
+    <img class="responsive-img" src="/images/landinglogo.png" alt="imglandng">
+       </div>
+    <div class="sign-up">
+      <h2>Signup</h2>
 
-<form action="/auth/signup" method="POST" id="form-container">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow">
+      <form action="/auth/signup" method="POST" id="form-container">
+        <label for="username">Username</label>
+        <input id="username" type="text" name="username" placeholder="JonSnow">
 
-  <br><br>
+        <br>
 
-    <label for="email">Email</label>
-  <input id="email" type="email" name="email" placeholder="Enter your Email">
+        <label for="email">Email</label>
+        <input id="email" type="email" name="email" placeholder="Enter your Email">
 
-  <br><br>
+        <br>
 
-  <label for="password">Password</label>
-  <input id="password" type="password" name="password" placeholder="Your password">
+        <label for="password">Password</label>
+        <input id="password" type="password" name="password" placeholder="Your password">
 
-  <br><br>
-    <label for="type">Select your user type</label>
-  <select class="browser-default" name="userType" id="">
-    <option selected disabled> Choose One</option>
-    <option value="Adoption Center">Adoption Centre</option>
-    <option value="Citizen">Citizen </option>
-  </select> <br><br>
+        <br>
+        <label for="type">Select your user type</label>
+        <select class="browser-default" name="userType" id="">
+          <option selected disabled> Choose One</option>
+          <option value="Adoption Center">Adoption Centre</option>
+          <option value="Citizen">Citizen </option>
+        </select>
+        
+        {{#if message }}
+        <div class="error-message">{{ message }}</div>
+        {{/if}}
 
-  <br><br>
-  <br>
-  {{#if message }}
-    <div class="error-message">{{ message }}</div>
-  {{/if}}
+        <br><br>
 
-  <br><br>
+        <button class="waves-effect waves-light btn">Create account</button>
 
-  <button class="waves-effect waves-light btn">Create account</button>
-
-  <p class="account-message">
-    Do you already have an account?
-    <a href="/auth/login">Login</a>
-  </p>
-</form>
+        <p class="account-message">
+          Do you already have an account?
+          <a href="/auth/login">Login</a>
+        </p>
+      </form>
+  </div>
+</div>
