--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,44 @@
-
 <div class="logo-container">
-  <img class="responsive-img" src="/images/landinglogo.png" alt="imglandng">
+  <div>
+    <img class="responsive-img" src="/images/landinglogo.png" alt="imglandng">
+       </div>
+    <div class="sign-up">
+      <h2>Signup</h2>
+
+      <form action="/auth/signup" method="POST" id="form-container">
+        <label for="username">Username</label>
+        <input id="username" type="text" name="username" placeholder="JonSnow">
+
+        <br>
+
+        <label for="email">Email</label>
+        <input id="email" type="email" name="email" placeholder="Enter your Email">
+
+        <br>
+
+        <label for="password">Password</label>
+        <input id="password" type="password" name="password" placeholder="Your password">
+
+        <br>
+        <label for="type">Select your user type</label>
+        <select class="browser-default" name="userType" id="">
+          <option selected disabled> Choose One</option>
+          <option value="Adoption Center">Adoption Centre</option>
+          <option value="Citizen">Citizen </option>
+        </select>
+        
+        {{#if message }}
+        <div class="error-message">{{ message }}</div>
+        {{/if}}
+
+        <br><br>
+
+        <button class="waves-effect waves-light btn">Create account</button>
+
+        <p class="account-message">
+          Do you already have an account?
+          <a href="/auth/login">Login</a>
+        </p>
+      </form>
+  </div>
 </div>
