--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,10 +1,7 @@
-<div class="col s12">
-
-  <h4>Hello, {{user.username}}!!</h4>
+<div class="col s12 container-title">
+  <h1>Hello, {{user.username}}!!</h1>
   <h3>Find the right home for your pet</h3>
-
-
-  <div class="col s12" id="map"></div>
+<div class="col s12" id="map"></div>
   <button class="waves-effect waves-light btn"><a href="/main/new" </a>Add new marker</button> </div> 
   
   <script>
