--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -48,7 +48,7 @@ label {
   width: 100%; 
 }
 .responsive-img {
-  margin: 5vh auto;
+  margin: 1vh auto;
   display: block;
   width: 75%;
 }
@@ -59,7 +59,8 @@ label {
   color: white;
 }
 .pet-profile {
-  width: 300px;
+  width: 180px;
+  height: 180px;
   border-radius: 50%;
   opacity: 1.5; 
 }
@@ -78,3 +79,13 @@ label {
   opacity: .5; 
 }
 
+.animal{
+  display: flex;
+  flex-direction: row;
+ justify-content: center;
+}
+.animal-child{
+width: 33%;
+
+
+}
