--- a/views/userLocation.hbs
+++ b/views/userLocation.hbs
@@ -6,12 +6,12 @@
 <h3>Create New Location</h3>
 
 <form action="/main/new" method="POST">
-  <input type="text" name="userLocationName" placeholder="New Location" id="userLocationName">
+  <input type="text" name="userLocationName" placeholder="Name for your location" id="userLocationName">
   <input type="hidden" name="lat" id="lat">
   <input type="hidden" name="lng" id="lng">
+  <input id="pac-input" class="controls" type="text" placeholder="Enter your address">
   <button class="waves-effect waves-light btn" type="submit">Save</button>
 </form>
-<input id="pac-input" class="controls" type="text" placeholder="Search Box">
 <div id="map"></div><br>
 
 
