--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -60,8 +60,8 @@ label {
   color: white;
 }
 .pet-profile {
-  width: 180px;
-  height: 180px;
+  width: 60%;
+  height: 40%;
   border-radius: 50%;
   opacity: 1.5; 
 }
