--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -12,7 +12,7 @@
   <label for="typeActivity">Select your activity</label>
   <select class="browser-default" name="typeActivity" id="">
     <option value="Adoption">Adoption</option>
-    <option value="Finder">Find babySitter</option>
+    <option value="Finder">Looking for Someone to Adopt</option>
     <option value="Babysitting">BabySitting</option>
     <option value="Both">Both</option>
   </select> 
