--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -3,7 +3,7 @@
 <p>Name: {{user.username}}</p>
 <p>Email: {{user.email}}</p>
 <p>Availability: {{user.availability}}</p>
-<p>Price/hour: {{user.pricePerHour}}</p>
+<p>Price/hour: {{user.pricePerHour}}€</p>
 <p>Center description: {{user.centerDescription}}</p>
 <p>Activity: {{user.typeActivity}}</p>
 <button class="waves-effect waves-light btn"><a href="/profile">Edit Profile</a></button>
