--- a/views/client-profile.hbs
+++ b/views/client-profile.hbs
@@ -6,3 +6,20 @@
 <p>Price/hour: {{user.pricePerHour}}</p>
 <p>Center description: {{user.centerDescription}}</p>
 <p>Activity: {{user.typeActivity}}</p>
+
+<h4>My Pets</h4>
+<div class="animal">
+  {{#each user.pets}}
+
+  <div class="animal-child">
+    <img class="pet-profile" src="{{this.petPath}}" alt=" {{this.name}}'s Photo'">
+    <p>Name: {{this.name}}</p>
+    <p>Age: {{this.age}}</p>
+    <p>Description:{{this.description}}</p>
+    <p>Notes: {{this.notes}}</p>
+    <p>Is {{this.name}} vaccinated? {{this.vaccunationCompleted}}</p>
+  </div>
+
+
+  {{/each}}
+</div>
