--- a/views/petForm.hbs
+++ b/views/petForm.hbs
@@ -1,4 +1,6 @@
-<h3 class="center-align">Add your pet</h3>
+
+<h3 >Add your pet</h3>
+<div class="form-center">
 <form action="/main/pets" method="POST" enctype="multipart/form-data">
   <label for="name">Pet Name</label>
   <input type="text" name="name" id="name" required> <br><br>
@@ -28,6 +30,6 @@
   
   <label for="petPhoto">Photo</label>
   <input type="file" name="petPhoto" id="petPhoto"><br>
-
+</div>
   <button class="waves-effect waves-light btn" type="submit">Send</button>
 </form>
