--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,6 +29,13 @@ p {
   padding-top: 5.5px;
   float: right; }
 
+.main-profile-pic {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 10%;
+  border-radius: 50%; }
+
 label {
   font-size: 1.8rem !important;
   color: black; }
@@ -79,5 +86,11 @@ label {
 
 .animal-child {
   width: 33%; }
+
+.form-center {
+  width: 50%;
+  display: block;
+  margin: 10px auto;
+  line-height: 30px; }
 
 /*# sourceMappingURL=style.css.map */
