--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -31,6 +31,13 @@ p {
   padding-top: 5.5px;
   float: right;
    }
+.main-profile-pic{
+	margin-left: auto;
+	margin-right: auto;
+  display: block;
+  width: 10%;
+  border-radius: 50%;
+   }
 
 label {
   font-size: 1.8rem !important;
@@ -86,6 +93,10 @@ label {
 }
 .animal-child{
 width: 33%;
-
-
+}
+.form-center{
+width: 50%;
+display: block;
+margin: 10px auto;
+line-height: 30px;
 }
