--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,13 +1,14 @@
 {{!-- <a href="/main">Go to Main</a> --}}
-<h3>Edit Your Profile</h3>
+<h3>Edit Your Profile</h3> <br>
+<div class="form-center">
 <form action="/profile" method="post" enctype="multipart/form-data">
   <label for="availability">Available</label>
-  <input type="text" name="availability" id="" placeholder="Enter your time schedule"> <br>
+  <input type="text" name="availability" id="" placeholder="Enter your time schedule"> <br> <br>
   <label for="pricePerHour">Enter your fee</label>
-  <input type="text" name="pricePerHour" id="" placeholder="Enter your fee/hour in €"><br>
+  <input type="text" name="pricePerHour" id="" placeholder="Enter your fee/hour in €"><br> <br>
 
-  <label for="centerDescription">Description</label>
-  <textarea name="centerDescription" placeholder="Describe the location's facilities"></textarea><br><br>
+  <label for="centerDescription">Information</label>
+  <textarea name="centerDescription" placeholder="Information about yourself and the location's facilites"></textarea><br><br>
 
   <label for="typeActivity">Select your activity</label>
   <select class="browser-default" name="typeActivity" id="">
@@ -20,6 +21,6 @@
 
   <label for="userPhoto">Photo</label>
   <input type="file" name="userPhoto" id="userPhoto"> <br>
-
+</div>
    <button class="waves-effect waves-light btn" type="submit">Update</button>
 </form>
