--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,10 +1,15 @@
 body {
   padding: 50px;
   font: 14px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Merienda', cursive;
   background-color: #FFE6B7;
 }
-
+footer{
+  color: black;
+  font-size: 14px;
+  background-color: rgba($color: #afafaf, $alpha: 0.5);
+  margin: 20px 0 10px;
+}
 a {
   color: #00B7FF; }
 
@@ -13,13 +18,20 @@ h1, h2, h3, h4, h5, h6 {
   color: #9e9e9e; }
 
 .icon-title {
-  color: black; }
+  font-size: 20px;
+  color: black; 
+  font-family: 'Merienda', cursive;}
 
 .icon-text {
-  font-size: 14px; }
+  font-size: 18px; 
+  font-family: 'Merienda', cursive;
+
+  color: indianred;
+}
 
 .icon-container {
-  text-align: center; }
+  text-align: center; 
+}
 
 p {
   color: black;
@@ -46,7 +58,9 @@ label {
 
 #map {
   height: 80vh;
-  border-radius: 10px; }
+  border-radius: 10px; 
+  box-shadow:black 5px 10px 50px
+}
 
 .logo-container {
   display: flex;
