--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,8 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   {{!-- <title>{{title}}</title> --}}
   <link rel="stylesheet" href="/stylesheets/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+  <link href="https://fonts.googleapis.com/css?family=Merienda:700" rel="stylesheet">
 </head>
 
 <body>
@@ -35,5 +36,5 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 </body>
-
+<footer>PetFamily Inc. - Angel & Sofi</footer>
 </html>
