--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -16,14 +16,14 @@
     <img class="pet-profile" src="{{this.petPath}}" alt=" {{this.name}}'s Photo'">
     <p>Name: {{this.name}}</p>
     <p>Age: {{this.age}}</p>
-    <p>Information:{{this.description}}</p>
+    <p>Information: {{this.description}}</p>
     <p>Notes: {{this.notes}}</p>
     <p>Is {{this.name}} vaccinated? {{this.vaccunationCompleted}}</p>
     <button type="submit" class=" waves-effect waves-light btn"><a href="/main/pets/{{this._id}}/edit">Edit this pet</a></button> <br>
-    <button type="submit" class=" waves-effect waves-light btn"><a href="/main/pets/{{this._id}}/delete">Remove this pet</a></button>
+    <button type="submit" class=" waves-effect waves-light btn"><a href="/main/pets/{{this._id}}/delete">Remove this pet</a></button><br> <br>
+
   </div>
-
-
 {{/each}}
+
 </div>
 {{!-- <button class=" waves-effect waves-light btn"><a href="/main/pets/edit">Edit Pet Profile</a></button> --}}
