--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,8 @@ footer {
   color: black;
   font-size: 14px;
   background-color: rgba(175, 175, 175, 0.5);
-  margin: 20px 0 10px; }
+  margin: 20px 0 10px;
+  padding: 20px; }
 
 a {
   color: #00B7FF; }
