--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -9,6 +9,7 @@ footer{
   font-size: 14px;
   background-color: rgba($color: #afafaf, $alpha: 0.5);
   margin: 20px 0 10px;
+  padding: 20px;
 }
 a {
   color: #00B7FF; }
