--- a/views/main.hbs
+++ b/views/main.hbs
@@ -5,7 +5,8 @@
   <h3>Find the right home for your pet</h3>
   </div>
 <div class="col s12" id="map"></div>
-  <button class="waves-effect waves-light btn"><a href="/main/new" </a>Add new marker</button> </div> 
+</div> 
+  <button class="waves-effect waves-light btn"><a href="/main/new" </a>Add new marker</button> 
   
   <script>
     window.address = {{{ address }}};
